[insert interesting content here]

--- a/home.html
+++ b/home.html
@@ -14,15 +14,19 @@
         <div id="overlay">
             <div id="aboutme" class="popup">
                 <button class="exit" onclick="hideSection('aboutme')">×</button>
+                <div class="content">[insert interesting content here]</div>
             </div>
             <div id="experience" class="popup">
                 <button class="exit" onclick="hideSection('experience')">×</button>
+                <div class="content">[insert interesting content here]</div>
             </div>
             <div id="projects" class="popup">
                 <button class="exit" onclick="hideSection('projects')">×</button>
+                <div class="content">[insert interesting content here]</div>
             </div>
             <div id="hobbies" class="popup">
                 <button class="exit" onclick="hideSection('hobbies')">×</button>
+                <div class="content">[insert interesting content here]</div>
             </div>
             <div id="tint"></div>
         </div>
