Hobbies initial layout

--- a/home.html
+++ b/home.html
@@ -71,6 +71,26 @@
                 <button class="exit" onclick="hideSection('hobbies')">×</button>
                 <div class="content">
                     <h2>My Hobbies & Extracurriculars</h2>
+                    <div class="hobbies-container">
+                        <div>
+                            Hobby 1
+                        </div>
+                        <div>
+                            Hobby 2
+                        </div>
+                        <div>
+                            Hobby 3
+                        </div>
+                        <div>
+                            Hobby 4
+                        </div>
+                        <div>
+                            Hobby 5
+                        </div>
+                        <div>
+                            Hobby 6
+                        </div>
+                    </div>
                 </div>
             </div>
             <div id="tint"></div>
