More subtexts and better CSS optimizations

--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div id="overlay">
-            <div id="aboutme" class="popup">
+            <div id="aboutme">
                 <button class="exit" onclick="hideSection('aboutme')">×</button>
                 <div class="content">
                     <h2>About Me!</h2>
@@ -22,7 +22,7 @@
                     </div>
                 </div>
             </div>
-            <div id="experience" class="popup">
+            <div id="experience">
                 <button class="exit" onclick="hideSection('experience')">×</button>
                 <div class="content">
                     <h2>Professional Experience</h2>
@@ -45,30 +45,27 @@
                     </div>
                 </div>
             </div>
-            <div id="projects" class="popup">
+            <div id="projects">
                 <button class="exit" onclick="hideSection('projects')">×</button>
                 <div class="content">
                     <h2>My Projects</h2>
                     <div class="projects-container">
-                        <div class="project-card">
-                            Project 1
+                        <div>
+                            "Mechy" Micro-sized RC
                         </div>
-                        <div class="project-card">
-                            Project 2
+                        <div>
+                            "Waveform" VALORANT Replica
                         </div>
-                        <div class="project-card">
-                            Project 3
+                        <div>
+                            "Turtleback" 3-Wheel Electric Skateboard
                         </div>
-                        <div class="project-card">
-                            Project 4
-                        </div>
-                        <div class="project-card">
-                            Project 5
+                        <div>
+                            3D Printed Record Player
                         </div>
                     </div>
                 </div>
             </div>
-            <div id="hobbies" class="popup">
+            <div id="hobbies">
                 <button class="exit" onclick="hideSection('hobbies')">×</button>
                 <div class="content">
                     <h2>My Hobbies & Extracurriculars</h2>
@@ -91,7 +88,7 @@
                             LEGO Mini-Set Design
                         </div>
                         <div>
-                            Computer Games
+                            Sandbox & Story Games
                         </div>
                     </div>
                 </div>
@@ -132,7 +129,7 @@
             <div class="box" style="background-color: #57A773;">
                 <img src="./images/building-9.jpg" class="thumbnail">
                 <p class="box-title">Experience</p>
-                <div class="box-content">From Minecraft to NASA <...></div>
+                <div class="box-content">From Minecraft to NASA, I've got a software-centric history or writing<br>both <b>front-end and back-end code</b><br>for a variety of applications.</div>
                 <button class="box-link" onclick="expandSection('experience')"><i>Click to Expand</i></button>
             </div>
             <div class="box" style="background-color: #8a867b;">
@@ -144,13 +141,13 @@
             <div class="box" style="background-color: #E2970B;">
                 <img src="./images/0-8-4.jpeg" class="thumbnail">
                 <p class="box-title">Projects</p>
-                <div class="box-content">The stars are calling and we must go.</div>
+                <div class="box-content">Personal projects designed to<br><b>challenge myself</b>, push my talents,<br>and explore what I can create from <b>combining different skills</b>.</div>
                 <button class="box-link" onclick="expandSection('projects')"><i>Click to Expand</i></button>
             </div>
             <div class="box" style="background-color: #08B2E3;">
                 <img src="./images/soarin.jpeg" class="thumbnail">
                 <p class="box-title">Hobbies</p>
-                <div class="box-content">Learn more about what I spend my freetime doing.</div>
+                <div class="box-content">Talents which complement or are unrelated to my career plans.</div>
                 <button class="box-link" onclick="expandSection('hobbies')"><i>Click to Expand</i></button>
             </div>
         </div>
