Projects description & flexing

--- a/home.html
+++ b/home.html
@@ -47,8 +47,9 @@
             </div>
             <div id="projects">
                 <button class="exit" onclick="hideSection('projects')">×</button>
-                <div class="content">
+                <div class="content" style="display:flex; flex-direction:column;">
                     <h2>My Projects</h2>
+                    <p>I'm always striving to improve my skills, thus all my projects below are built upon lessons learned from previous projects. Each project differs by either applying familiar concepts in more challenging ways or introducing a concept I haven't yet experimented with.<br><br>Projects preceded by another project marks that there were lessons carried over from the development of the peceding project.</p>
                     <div class="projects-container">
                         <div>
                             "Mechy" Micro-sized RC
