Added better thumbnail scaling + animation

--- a/home.html
+++ b/home.html
@@ -128,7 +128,7 @@
                 <a class="box-link" href="#aboutme"><i>Click to Expand</i></a>
             </div>
             <div class="box" style="background-color: #57A773;">
-                <img src="./images/building-9.jpg" class="thumbnail">
+                <img src="./images/building-9.png" class="thumbnail">
                 <p class="box-title">Experience</p>
                 <div class="box-content">From Minecraft to NASA, I've got a software-centric history or writing<br>both <b>front-end and back-end code</b><br>for a variety of applications.</div>
                 <a class="box-link" href="#experience"><i>Click to Expand</i></a>
