--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
             <div id="aboutme">
                 <button class="exit" onclick="hideSection('aboutme')">×</button>
                 <div class="content">
-                    <h2>About Me!</h2>
+                    <h2>About Me</h2>
                     <div class="dropdown-container" class="display:flexbox;">
                         <p style="display:inline; width:50vw; float:left;">Hello! My name is Richie, although I typically go by Raymond. I've been studying Computer Engineering at the California Polytechnic State University, Pomona since 2020.</p>
                         <img src="./images/portrait.jpg" style="width:20vw; display:inline; float:right;">
@@ -52,7 +52,8 @@
                     <p>I'm always striving to improve my skills, thus all my projects below are built upon lessons learned from previous projects. Each project differs by either applying familiar concepts in more challenging ways or introducing a concept I haven't yet experimented with.<br><br>Projects preceded by another project marks that there were lessons carried over from the development of the peceding project.</p>
                     <div class="projects-container">
                         <div>
-                            "Mechy" Micro-sized RC
+                            <h3>"Mechy" Micro-sized RC</h3>
+                            <img src="./images/portrait.JPG" class="thumbnail"/>
                         </div>
                         <div>
                             "Waveform" VALORANT Replica
@@ -72,24 +73,24 @@
                     <h2>My Hobbies & Extracurriculars</h2>
                     <div class="hobbies-container">
                         <div>
-                            3D Printing
+                            <h3>3D Printing</h3>
                         </div>
                         <div>
                             <!-- TODO change -->
-                            Electronics
+                            <h3>Electronics</h3>
                         </div>
                         <div>
-                            Photography
+                            <h3>Photography</h3>
                         </div>
                         <div>
                             <!-- TODO change -->
-                            Software
+                            <h3>Software</h3>
                         </div>
                         <div>
-                            LEGO Mini-Set Design
+                            <h3>LEGO Mini-Set Design</h3>
                         </div>
                         <div>
-                            Sandbox & Story Games
+                            <h3>Sandbox & Story Games</h3>
                         </div>
                     </div>
                 </div>
@@ -128,7 +129,7 @@
                 <a class="box-link" href="#aboutme"><i>Click to Expand</i></a>
             </div>
             <div class="box" style="background-color: #57A773;">
-                <img src="./images/building-9.png" class="thumbnail">
+                <img src="./images/jpl.jpeg" class="thumbnail">
                 <p class="box-title">Experience</p>
                 <div class="box-content">From Minecraft to NASA, I've got a software-centric history or writing<br>both <b>front-end and back-end code</b><br>for a variety of applications.</div>
                 <a class="box-link" href="#experience"><i>Click to Expand</i></a>
