--- a/home.html
+++ b/home.html
@@ -54,15 +54,22 @@
                         <div>
                             <h3>"Mechy" Micro-sized RC</h3>
                             <img src="./images/portrait.JPG" class="thumbnail"/>
+                            <p><em>Mechy</em> is my attempt to make a remote-controllable device as small as possible. It's build around a Raspberry Pi Pico W (the W model is used for its bluetooth capability) mounted onto a custom PCB. The PCB is designed to provide power to the Pico and connect GPIO pins to control the motor direction via two H-Bridge circuits, one for each motor.</p>
                         </div>
                         <div>
-                            "Waveform" VALORANT Replica
+                            <h3>"Waveform" VALORANT Replica</h3>
+                            <img src="./images/portrait.JPG" class="thumbnail"/>
+                            <p>The <em>Waveform</em> is a replica of the Zedd-collaboration knife skin featured in Riot's tactical shooter VALORANT.</p>
                         </div>
                         <div>
-                            "Turtleback" 3-Wheel Electric Skateboard
+                            <h3>"Turtleback" Electric Longboard</h3>
+                            <img src="./images/portrait.JPG" class="thumbnail"/>
+                            <p>The <em>Turtleback</em> is a personal motorized longboard, custom-built from aluminum 2040 beams and controlled </p>
                         </div>
                         <div>
-                            3D Printed Record Player
+                            <h3>FPGA-Powered Record Player</h3>
+                            <img src="./images/portrait.JPG" class="thumbnail"/>
+                            <p>Work in progress</p>
                         </div>
                     </div>
                 </div>
@@ -76,15 +83,13 @@
                             <h3>3D Printing</h3>
                         </div>
                         <div>
-                            <!-- TODO change -->
-                            <h3>Electronics</h3>
+                            <h3>Electronics Projects</h3>
                         </div>
                         <div>
                             <h3>Photography</h3>
                         </div>
                         <div>
-                            <!-- TODO change -->
-                            <h3>Software</h3>
+                            <h3>Rock Climbing</h3>
                         </div>
                         <div>
                             <h3>LEGO Mini-Set Design</h3>
@@ -101,7 +106,7 @@
             <div class="bg"></div>
             <img src="./images/full_icon.png" style="position:absolute; height:50%; transform:translate(50%,50%);">
             <div id="contact-btn">
-                <p>◄ CONTACT INFO</p>
+                <p>◄ CONTACT ME</p>
                 <div id="contact-info">
                     <a class="social-media" title="LinkedIn" style="left:20%" target=”_blank” href="https://www.linkedin.com/in/raymond-exe/">
                         <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>LinkedIn</title><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z" fill="white"/></svg>
@@ -134,8 +139,8 @@
                 <div class="box-content">From Minecraft to NASA, I've got a software-centric history or writing<br>both <b>front-end and back-end code</b><br>for a variety of applications.</div>
                 <a class="box-link" href="#experience"><i>Click to Expand</i></a>
             </div>
-            <div class="box" style="background-color: #8a867b;">
-                <img src="./images/stairway.jpg" class="thumbnail">
+            <div class="box" style="background-color: #d0d0d0;">
+                <img src="./images/building-9.png" class="thumbnail">
                 <p class="box-title">Resume</p>
                 <img class="box-content" style="width:auto; height:45%; image-rendering:pixelated;" src="./images/resume_qr.png">
                 <a href="./r.html" class="box-link"><i>Click to view</i></a>
