Adding this one single line for now

--- a/home.html
+++ b/home.html
@@ -52,6 +52,8 @@
                         <button class="subsection-button" title="Click to expand" onclick="toggleSection('exp-jpl', true)">Jet Propulsion Laboratory - <i>Summer Intern</i></button>
                         <div class="subsection" id="exp-jpl">
                             The role of my Summer 2023 internship at NASA's Jet Propulsion Laboratory was the <b>development of systems functionality modeling software</b> for use by systems engineers in the process of designing spacecraft and robotics at JPL.
+                            <br>
+                            Learn more about OML Vision on <a href="https://github.com/opencaesar/oml-vision">GitHub</a> and <a href="https://www.opencaesar.io/projects/2023-05-29-OML-Vision.html">openCAESAR</a>.
                         </div>
                     </div>
                 </div>
