--- a/home.html
+++ b/home.html
@@ -18,17 +18,15 @@
                     <h2>About Me</h2>
                     <div class="dropdown-container" class="display:flexbox;">
                         <p style="display:inline; width:50vw; float:left;">
-                            Hello! My name is Richie, although I typically go by Raymond. I'm a 4th year Computer Engineering undergraduate looking forward to seeing what I can do with FPGAs.
+                            <b>Hello! My name is Richie, although I typically go by Raymond.</b> I'm an undergraduate Computer Engineering student at the California State Polytechnic University, Pomona.
                             <br><br>
-                            I've been studying Computer Engineering at the Cal Poly Pomona since 2021, when I changed majors from Computer Science. TODO: more info about CPP here.
+                            <b>I'm a quick learner and a challenger-seeker,</b> who has experience with Verilog, Python, Java, JavaScript, and TypeScript among other languages. While I've worked with FPGAs, microcontrollers, and even in software, I'm looking to work more with HDL languages and FPGAs in the future. If you're still interested in my skills, feel free to look through my <a href="#projects" onclick="hideSection('aboutme')">projects</a> and <a href="#experience" onclick="hideSection('aboutme')">experience</a> for more information.
                             <br><br>
-                            TODO: Skills & expertise. // If you're still interested in my skills, feel free to look through my <a href="#projects" onclick="hideSection('aboutme')">projects</a> and <a href="#experience" onclick="hideSection('aboutme')">experience</a> sections for more information.
+                            <b>I'm motivated by the idea of pushing what I'm capable of,</b> whether it's in a project I'm pursuing or a game I'm trying something new in. These self-challenges can range from physical scaling constraints to time constraints, or can even affect how I implement the project entirely. If I'm confident I can achieve a task in a certain manner, I begin looking for ways I can improve how the task.
                             <br><br>
-                            TODO: Unique Selling Proposition - Highlight any unique skills, experiences, or perspectives.
-                            <br><br>
-                            TODO: Passion and Motivation: Share your passion for your work and what motivates you professionally.
-                            <br><br>
-                            TODO: Future goals & call to action - Briefly mention your future career goals and aspirations. Add an invitation to connect, inquire about opportunities, or learn more about your work.</p>
+                            <b>I hope to eventually work on the cutting-edge of the aerospace industry,</b> where I can use my skills to help push human innovation.
+                            <!-- TODO elaborate on exploratory projects (bomber vs museum analogy)-->
+                        </p>
                         <img src="./images/portrait.jpg" style="width:20vw; display:inline; float:right;">
                     </div>
                 </div>
@@ -65,24 +63,50 @@
                     <p>I'm always striving to improve my skills, thus all my projects below are built upon lessons learned from previous projects. Each project differs by either applying familiar concepts in more challenging ways or introducing a concept I haven't yet experimented with.<br><br>Projects preceded by another project marks that there were lessons carried over from the development of the peceding project.</p>
                     <div class="projects-container">
                         <div>
-                            <h3>"Waveform" VALORANT Replica</h3>
                             <img src="./images/portrait.JPG" class="thumbnail"/>
+                            <span></span>
+                            <h3>"Waveform" VALORANT Replica</h3>
+                            <img src="https://img.shields.io/badge/Completed_2022-green" class="project-status">
                             <p>The <em>Waveform</em> is a replica of the Zedd-collaboration knife skin featured in Riot's tactical shooter VALORANT. My version is a simple, battery-operated LED light stick toggled via a single switch.</p>
                         </div>
                         <div>
+                            <img src="./images/game-of-life.jpg" class="thumbnail"/>
+                            <span></span>
+                            <h3>Conway's <em>Game of Life</em> in Verilog</h3>
+                            <img src="https://img.shields.io/badge/Completed_2023-green" class="project-status">
+                            <p>
+                                A Verilog implementation <a href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life">Conway's <em>Game of Life</em></a> run on a Nexys A7 development board, using its I/O for grid control.
+                                <br>
+                                <br>
+                                <b>Links:</b>
+                                <br>
+                                - <a href="https://github.com/Raymond-exe/Conway.v">GitHub repo</a>
+                                <br>
+                                - <a href="https://www.youtube.com/watch?v=CcwDj1lyKrI">Demo video</a>
+                                <br>
+                                - <a href="https://docs.google.com/document/d/1esijIz1XCN74vlpnBnkL7jEymoO07kjb9qlBPdcqF9o">Project report</a>
+                            </p>
+                        </div>
+                        <div>
+                            <img src="./images/portrait.JPG" class="thumbnail"/>
+                            <span></span>
                             <h3>"Turtleback" Electric Longboard</h3>
-                            <img src="./images/portrait.JPG" class="thumbnail"/>
-                            <p>The <em>Turtleback</em> is a personal motorized longboard, custom-built from aluminum 2040 beams and controlled </p>
+                            <img src="https://img.shields.io/badge/In_Progress-yellow" class="project-status">
+                            <p>The <em>Turtleback</em> is a personal motorized longboard, with a custom-built chasis and driven by an Arduino Uno.</p>
                         </div>
                         <div>
+                            <img src="./images/portrait.JPG" class="thumbnail"/>
+                            <span></span>
                             <h3>"Mechy" Micro-sized RC</h3>
-                            <img src="./images/portrait.JPG" class="thumbnail"/>
-                            <p><em>Mechy (ver. III)</em> is my attempt to make a remote-controllable device as small as possible. It's build around a Raspberry Pi Pico W (used for its bluetooth capability) mounted onto a self-designed motor shield. The outer shell is 3D printed and the total weight is around 50 grams.</p>
+                            <img src="https://img.shields.io/badge/Planned 2024-red" class="project-status">
+                            <p><em>Mechy (ver. III)</em> is a miniaturized remote-controlled device, built around a Raspberry Pi Pico W and a custom PCB motor shield.</p> <!-- The outer shell is 3D printed and the total weight is around 50 grams. -->
                         </div>
                         <div>
-                            <h3>FPGA-Powered Record Player</h3>
                             <img src="./images/portrait.JPG" class="thumbnail"/>
-                            <p>Work in progress</p>
+                            <span></span>
+                            <h3>FPGA-Powered Record Player</h3>
+                            <img src="https://img.shields.io/badge/Planned 2024-red" class="project-status">
+                            <!-- <p>Work in progress</p> -->
                         </div>
                     </div>
                 </div>
@@ -94,21 +118,20 @@
                     <div class="hobbies-container">
                         <div>
                             <h3>3D Printing</h3>
-                        </div>
-                        <div>
-                            <h3>Electronics Projects</h3>
+                            <img src="./images/0-8-4.jpeg" class="thumbnail">
+                            <p>In my free time...</p>
                         </div>
                         <div>
                             <h3>Photography</h3>
+                            <p>Every photograph shown on my portfolio was taken by me!</p>
                         </div>
                         <div>
                             <h3>Rock Climbing</h3>
-                        </div>
-                        <div>
-                            <h3>LEGO Mini-Set Design</h3>
+                            <p>Between classes...</p>
                         </div>
                         <div>
                             <h3>Sandbox & Story Games</h3>
+                            <p>I enjoy a mix of narrative and challenge-based games, such as Fallout, Portal, and Kerbal Space Program.</p>
                         </div>
                     </div>
                 </div>
