Added assignment tag
Also hid waveform

--- a/home.html
+++ b/home.html
@@ -62,20 +62,21 @@
                     <h2>My Projects</h2>
                     <p>I'm always striving to improve my skills, thus all my projects below are built upon lessons learned from previous projects. Each project differs by either applying familiar concepts in more challenging ways or introducing a concept I haven't yet experimented with.<br><br>Projects preceded by another project marks that there were lessons carried over from the development of the peceding project.</p>
                     <div class="projects-container">
-                        <div>
+                        <!-- <div>
                             <img src="./images/portrait.JPG" class="thumbnail"/>
                             <span></span>
                             <h3>"Waveform" VALORANT Replica</h3>
                             <img src="https://img.shields.io/badge/Completed_2022-green" class="project-status">
                             <p>The <em>Waveform</em> is a replica of the Zedd-collaboration knife skin featured in Riot's tactical shooter VALORANT. My version is a simple, battery-operated LED light stick toggled via a single switch.</p>
-                        </div>
+                        </div> -->
                         <div>
                             <img src="./images/game-of-life.jpg" class="thumbnail"/>
                             <span></span>
                             <h3>Conway's <em>Game of Life</em> in Verilog</h3>
+                            <img src="https://img.shields.io/badge/Assignment-blue" class="project-status">
                             <img src="https://img.shields.io/badge/Completed_2023-green" class="project-status">
                             <p>
-                                A Verilog implementation <a href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life">Conway's <em>Game of Life</em></a> run on a Nexys A7 development board, using its I/O for grid control.
+                                A Verilog implementation of <a href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life">Conway's <em>Game of Life</em></a> run on a Nexys A7 development board, using its I/O for grid control.
                                 <br>
                                 <br>
                                 <b>Links:</b>
