Added FIFO stack project

--- a/home.html
+++ b/home.html
@@ -89,6 +89,16 @@
                             </p>
                         </div>
                         <div>
+                            <img src="./images/portrait.jpg" class="thumbnail"/>
+                            <span></span>
+                            <h3>FIFO stack Verilog demo</h3>
+                            <img src="https://img.shields.io/badge/Assignment-blue" class="project-status">
+                            <img src="https://img.shields.io/badge/Completed_2023-green" class="project-status">
+                            <p>
+                                A small first-in-first-out buffer demonstration implemented on the Digilent's Nexys A7 dev board. The buffer contains 8 slots which can carry 4 bits each (or one hex digit), and is displayed on the 8 seven-segment-display digits provided on the Nexys A7.
+                            </p>
+                        </div>
+                        <div>
                             <img src="./images/portrait.JPG" class="thumbnail"/>
                             <span></span>
                             <h3>"Turtleback" Electric Longboard</h3>
