Dark mode trial

--- a/simplified.html
+++ b/simplified.html
@@ -8,8 +8,15 @@
         <title>𝙍𝙞𝙘𝙝𝙞𝙚 𝙍𝙖𝙮𝙢𝙤𝙣𝙙 𝙒𝙤𝙣𝙜</title>
         <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/597/597874.png">
         <script type="module" src="https://md-block.verou.me/md-block.js"></script> <!-- Used for markdown rendering -->
+        <script type="text/javascript">
+            function darkMode() {
+                var element = document.body;
+                element.classList.toggle("dark-mode");
+            }
+          </script>
     </head>
     <body>
+        <!-- <button onclick="darkMode()">Try dark mode</button> -->
         <md-block src="./simplified.md"/>
     </body>
 </html>
